--- a/QLPhongMachTuWPF/View/Staffs.xaml
+++ b/QLPhongMachTuWPF/View/Staffs.xaml
@@ -31,7 +31,12 @@
             <TextBlock Margin="20,0,30,0" VerticalAlignment="Center" Foreground="#b0b9c6" IsHitTestVisible="False"
    Panel.ZIndex="1" Text="Search" Visibility="{Binding ElementName=txtSearch, Path=Text.IsEmpty,Converter={StaticResource BoolToVis}}" FontSize="20"/>
 
-            <TextBox x:Name="txtSearch" Style="{StaticResource txtBoxSearch}"/>
+            <TextBox x:Name="txtSearch"
+                     Text="{Binding SearchKeyword, UpdateSourceTrigger=PropertyChanged}"
+                  Style="{StaticResource txtBoxSearch}"
+                     
+                     
+                     />
             <Image Source="/Images/search.png" Width="20" Height="20" HorizontalAlignment="Right" Margin="5"/>
         </Grid>
 
@@ -42,7 +47,7 @@
         </Button>
 
 
-        <DataGrid Grid.Row="1" Background="#eeeeee" ItemsSource="{Binding StaffList}"  ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="staffDatagrid" Margin="0,0,0,10"
+        <DataGrid Grid.Row="1" Background="#eeeeee" ItemsSource="{Binding FilteredStaffs}"  ColumnHeaderStyle="{DynamicResource DataGridColumnHeaderStyle2}" Style="{DynamicResource DataGridStyle1}" CellStyle="{DynamicResource DataGridCellStyle1}"  RowStyle="{DynamicResource DataGridRowStyle1}" x:Name="staffDatagrid" Margin="0,0,0,10"
           HorizontalScrollBarVisibility="Disabled" Grid.RowSpan="2" 
     HorizontalAlignment="Stretch" VerticalAlignment="Stretch"
     Width="auto" Height="auto" VerticalScrollBarVisibility="Auto">
