--- a/QLPhongMachTuWPF/ResourceXAML/AddDictionary.xaml
+++ b/QLPhongMachTuWPF/ResourceXAML/AddDictionary.xaml
@@ -1,66 +1,56 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-    <Style x:Key="TitleText" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="36"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="Foreground" Value="White"/>
-        <Setter Property="VerticalAlignment" Value="Top"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="Margin" Value="20 10 0 0"/>
-    </Style>
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes">
 
-    <Style x:Key="textBlock" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="20"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="Margin" Value="150,0,0,0"/>
-    </Style>
-
-    <Style x:Key="anotherTextBlock" TargetType="TextBlock">
-        <Setter Property="FontSize" Value="20"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        <Setter Property="HorizontalAlignment" Value="Left"/>
-        <Setter Property="Margin" Value="150,20,0,0"/>
-    </Style>
-    <Style x:Key="textBox" TargetType="TextBox">
-        <Setter Property="IsEnabled" Value="True"/>
-        <Setter Property="Margin" Value="275 20 200 0"/>
-        <Setter Property="BorderThickness" Value="2"/>
-    </Style>
-
-    <Style x:Key="anotherTextBox" TargetType="TextBox">
-        <Setter Property="IsEnabled" Value="True"/>
-        <Setter Property="Margin" Value="275 0 200 0"/>
-        <Setter Property="BorderThickness" Value="2"/>
-    </Style>
-
-    <Style x:Key="passwordBox" TargetType="PasswordBox">
-        <Setter Property="IsEnabled" Value="True"/>
-        <Setter Property="Margin" Value="275 20 200 0"/>
-        <Setter Property="BorderThickness" Value="2"/>
-    </Style>
-
-    <Style x:Key="buttonAdd" TargetType="Button">
-        <Setter Property="VerticalAlignment" Value="Bottom"/>
-        <Setter Property="HorizontalAlignment" Value="Right"/>
-        <Setter Property="Margin" Value="10 10"/>
-        <Setter Property="Background" Value="#3693ff"/>
-        <Setter Property="Width" Value="150"/>
-        <Setter Property="Height" Value="50"/>
-        <Setter Property="FontSize" Value="20"/>
-    </Style>
-
-    <Style x:Key="radioBtnAdd" TargetType="RadioButton">
-        <Setter Property="FontSize" Value="16"/>
-        <Setter Property="FontWeight" Value="Bold"/>
-        
-    </Style>
-
-    <Style x:Key="StckPanel" TargetType="StackPanel">
-        <Setter Property="Orientation" Value="Horizontal"/>
+    <Style x:Key="icon" TargetType="materialDesign:PackIcon">
+        <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="HorizontalAlignment" Value="Center"/>
-        <Setter Property="Width" Value="300"/>
-        <Setter Property="Margin" Value="50 0 0 0"/>
+        <Setter Property="Width" Value="60"/>
+        <Setter Property="Height" Value="60"/>
+        <Setter Property="Foreground" Value="White"/>
     </Style>
-    
+
+    <Style x:Key="titleText" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="#1ca7ec"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Center"/>
+        <Setter Property="Margin" Value="80 0 0 0"/>
+        <Setter Property="FontSize" Value="32"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+    </Style>
+
+    <Style x:Key="btnAdd" TargetType="Button">
+        <!-- Các Setter cơ bản -->
+        <Setter Property="Foreground" Value="White"/>
+        <Setter Property="FontSize" Value="16"/>
+        <Setter Property="HorizontalAlignment" Value="Left"/>
+        <Setter Property="VerticalAlignment" Value="Bottom"/>
+        <Setter Property="Width" Value="250"/>
+        <Setter Property="Height" Value="40"/>
+        <Setter Property="Margin" Value="80"/>
+        <Setter Property="Background" Value="#3693ff"/>
+        <Setter Property="BorderThickness" Value="0"/>
+        <Setter Property="FontWeight" Value="Bold"/>
+
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}" CornerRadius="20">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <!-- Triggers cho sự kiện IsMouseOver -->
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#3693ff"/>
+                <Setter Property="Foreground" Value="#dcdcdc"/>
+            </Trigger>
+        </Style.Triggers>
+
+        <!-- ControlTemplate để thay đổi giao diện Button -->
+
+    </Style>
+
 </ResourceDictionary>
