--- a/QLPhongMachTuWPF/View/AddMedicineDiagnosis.xaml
+++ b/QLPhongMachTuWPF/View/AddMedicineDiagnosis.xaml
@@ -18,108 +18,131 @@ WindowStartupLocation="CenterScreen" WindowStyle="None" Background="Transparent"
     </Window.Resources>
 
     <Grid>
-        <!-- Định nghĩa 3 hàng để chia ra 3 phần-->
-        <Grid.RowDefinitions>
-            <!-- Phần đầu gồm Add Staff và nút close -->
-            <RowDefinition Height="0.5*"></RowDefinition>
-            <!-- Phần 2 là gồm các name, username ... và các textbox-->
-            <RowDefinition Height="3*"></RowDefinition>
-            <!-- Phần 3 là button để add staff-->
-            <RowDefinition Height="*" ></RowDefinition>
-        </Grid.RowDefinitions>
-        <Border Grid.Row="0" CornerRadius="10 10 0 0" MouseDown="Border_MouseDown">
-            <Border.Background>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="#3693ff"></GradientStop>
-                </LinearGradientBrush>
-            </Border.Background>
-            <!--Thêm TextBlock Add Staff-->
-            <TextBlock Text="Add medicine" Style="{StaticResource TitleText}" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="80"></ColumnDefinition>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
-        </Border>
-        <!--Button close để đóng form-->
-        <Grid Grid.Row="0" >
-            <Button x:Name="btnClose"
+        <Grid Grid.Column="0">
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <!--Logo-->
+            <Grid Grid.Row="0">
+                <Border CornerRadius="10 0 0 0" Background="#1ca7ec">
+
+                </Border>
+                <materialDesign:PackIcon Kind="ClipboardEdit" Style="{StaticResource icon}"/>
+
+
+
+
+            </Grid>
+            <!--chu-->
+            <Grid Grid.Row="1">
+                <Border CornerRadius="0 0 0 10">
+                    <Border.Background>
+                        <LinearGradientBrush>
+                            <GradientStop Color="#1ca7ec" Offset="0.0"/>
+                            <GradientStop Color="#1f2f98" Offset="1"/>
+                        </LinearGradientBrush>
+                    </Border.Background>
+                </Border>
+                <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center">
+                    <TextBlock Text="D" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="I" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="A" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="G" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="N" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="O" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="S" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="I" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+                    <TextBlock Text="S" Foreground="White" FontSize="32" FontWeight="Bold" TextAlignment="Center"/>
+
+                </StackPanel>
+            </Grid>
+        </Grid>
+
+        <Grid Grid.Column="1" >
+            <Grid.RowDefinitions>
+                <RowDefinition Height="80"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+
+            <!--Chu-->
+            <Grid Grid.Row="0" MouseDown="Border_MouseDown">
+                <Button x:Name="btnClose"
  BorderBrush="#3693ff"
 Grid.Column="1" Panel.ZIndex="1"
    Width="30"
    Height="30"
    VerticalAlignment="Top"
    HorizontalAlignment="Right"
-   Margin="0 15 15 0"
+   Margin="0 13 13 0"
    Click="btnClose_Click"
     BorderThickness="0">
-                <Button.Background >
-                    <ImageBrush ImageSource="/Images/image.png"
+                    <Button.Background >
+                        <ImageBrush ImageSource="/Images/image.png"
                 Stretch="Fill"
                 />
-                </Button.Background>
-            </Button>
-        </Grid>
-        <!--Phần 2 để thêm các phần Name username....-->
-        <Grid Grid.Row="1" Background="White">
+                    </Button.Background>
+                </Button>
+                <Border CornerRadius="0 10 0 0" Background="White"/>
+                <TextBlock Text="ADD MEDICINE" Style="{StaticResource titleText}"/>
+            </Grid>
 
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
-                    <RowDefinition></RowDefinition>
+            <!--Input-->
 
-                </Grid.RowDefinitions>
-                <!--Name-->
-                <Grid Grid.Row="1">
-                    <TextBlock Text="Medicine" Style="{StaticResource textBlock}" Margin="150 20 0 0"/>
+            <Grid Grid.Row="1">
+                <Border CornerRadius="0 0 10 0" Background="White"/>
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 100 0 0">
+                    <!--name-->
                     <TextBox
-                                    VerticalAlignment="Center"
-                                    materialDesign:HintAssist.Hint="Name"
-                                    Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-                                    HorizontalAlignment="Center" Width="300" Margin="50 0 0 10"
-                                    FontSize="16"
-                                    
-                             />
+                         VerticalAlignment="Center"
+                         materialDesign:HintAssist.Hint="Medicine"
+                         Style="{StaticResource MaterialDesignOutlinedTextBox}"
+                         Width="250" FontSize="16"/>
 
-                </Grid>
-                <!--Address-->
-                <Grid Grid.Row="3">
-                    <TextBlock Text="Unit" Style="{StaticResource anotherTextBlock}"/>
+                    <!--Unit-->
                     <TextBox
-            VerticalAlignment="Center"
-            materialDesign:HintAssist.Hint="Unit"
-            Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-            HorizontalAlignment="Center" Width="300" Margin="50 0 0 0"
-            FontSize="16"
-            
-     />
-                    <!--Phone-->
-                </Grid>
-                <Grid Grid.Row="5">
-                    <TextBlock Text="Price"  Style="{StaticResource anotherTextBlock}"/>
+VerticalAlignment="Center"
+materialDesign:HintAssist.Hint="Unit"
+Style="{StaticResource MaterialDesignOutlinedTextBox}"
+Width="250" FontSize="16" Margin="60 0 0 0"/>
+
+                </StackPanel>
+
+
+                <TextBlock Text="Status" Margin="390 -150 0 0" HorizontalAlignment="Left" VerticalAlignment="Center" Width="200" FontSize="16" Foreground="Gray"/>
+
+
+                <StackPanel Orientation="Horizontal" VerticalAlignment="Top" Margin="80 200 0 0">
+                    <!--Price-->
                     <TextBox
-       VerticalAlignment="Center"
-       materialDesign:HintAssist.Hint="Price(VND)"
-       Style="{StaticResource MaterialDesignFloatingHintTextBox}"
-       HorizontalAlignment="Center" Width="300" Margin="50 0 0 0"
-       FontSize="16"
-       
-/>
-                </Grid>
+VerticalAlignment="Center"
+materialDesign:HintAssist.Hint="Price"
+Style="{StaticResource MaterialDesignOutlinedTextBox}"
+Width="250" FontSize="16"/>
+                    <!--Status-->
+                    <ComboBox x:Name="cmbStatus" Width="250" Style="{StaticResource MaterialDesignOutlinedComboBox}"
+materialDesign:HintAssist.Hint="Available"
+ FontSize="16" Margin="60 0 0 0"/>
+                </StackPanel>
+
+
 
                 
 
+
+
+                <Button Content="Add medicine"  Style="{StaticResource btnAdd}">
+
+                </Button>
+
             </Grid>
-
-
-        </Grid>
-        <!-- Phần bên dưới Add Staff-->
-        <Grid Grid.Row="2" Background="White" >
-            <Button Content="Add medicine" VerticalAlignment="Bottom" HorizontalAlignment="Right" Margin="10 10"
-                Background="#3693ff" Foreground="White"
-                Width="250"
-              Height="50"
-                FontSize="20"></Button>
         </Grid>
     </Grid>
 </Window>
