--- a/QLPhongMachTuWPF/MainWindow.xaml
+++ b/QLPhongMachTuWPF/MainWindow.xaml
@@ -281,7 +281,7 @@
                             <StackPanel Orientation="Horizontal"
                        Width="200">
 
-                                <materialDesign:PackIcon Kind="Account" Width="30" Height="30" Foreground="White" Margin="12 0 0 0"/>
+                                <materialDesign:PackIcon Kind="AccountInjuryOutline" Width="30" Height="30" Foreground="White" Margin="12 0 0 0"/>
 
 
                                 <TextBlock Text="Patients"
@@ -307,7 +307,7 @@
                             <StackPanel Orientation="Horizontal"
                        Width="200">
 
-                                <materialDesign:PackIcon Kind="AccountHardHat" Width="30" Height="30" Foreground="White" Margin="12 0 0 0"/>
+                                <materialDesign:PackIcon Kind="Doctor" Width="30" Height="30" Foreground="White" Margin="12 0 0 0"/>
 
 
                                 <TextBlock Text="Staffs"
